; ModuleID = '/home/carl/AnghaBench/git/extr_convert.c_get_cached_convert_stats_ascii.c'
source_filename = "/home/carl/AnghaBench/git/extr_convert.c_get_cached_convert_stats_ascii.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.index_state = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_cached_convert_stats_ascii(%struct.index_state* %0, i8* %1) #0 {
  %3 = alloca %struct.index_state*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  store %struct.index_state* %0, %struct.index_state** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load %struct.index_state*, %struct.index_state** %3, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = call i8* @read_blob_data_from_index(%struct.index_state* %8, i8* %9, i64* %6)
  store i8* %10, i8** %7, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = load i64, i64* %6, align 8
  %13 = call i8* @gather_convert_stats_ascii(i8* %11, i64 %12)
  store i8* %13, i8** %5, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = call i32 @free(i8* %14)
  %16 = load i8*, i8** %5, align 8
  ret i8* %16
}

declare dso_local i8* @read_blob_data_from_index(%struct.index_state*, i8*, i64*) #1

declare dso_local i8* @gather_convert_stats_ascii(i8*, i64) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
